<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/app_Title"
        android:textColor="#000000"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoMain" />

    <Button
        android:id="@+id/btOrcamento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="btOrc"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/app_Orcamento"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitle"
        tools:text="@string/app_Orcamento" />

    <Button
        android:id="@+id/btTrabalhe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="btTrab"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/app_Trabalhe"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.777"
        app:layout_constraintStart_toEndOf="@+id/btOrcamento"
        app:layout_constraintTop_toBottomOf="@+id/textTitle"
        tools:text="@string/app_Trabalhe" />

    <TextView
        android:id="@+id/textMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:justificationMode="inter_word"
        android:text="@string/app_text"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btTrabalhe"
        tools:targetApi="o" />

    <ImageView
        android:id="@+id/logoMain"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:contentDescription="@string/app_Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/acw" />
</androidx.constraintlayout.widget.ConstraintLayout>